resources/app.scss
/* ... */
.footer__cta {
  background-image: url('../dist/images/footer_cta_bg.png');
  background-color: $primary;
  padding: 50px 10px;
  text-align: center;

  @include media-breakpoint-down(sm) {
    padding: 20px 50px;
  }

  .footer__cta-title {
    font-size: 24px;
    font-family: 'ProximaNova-Bold', sans-serif;
    color: white;
    margin-bottom: 20px;
  }

  .footer__cta-action {
    display: flex;
    justify-content: center;

    button {
      background-color: $secondary;
      color: white;
      font-family: 'ProximaNova-SemiBold', sans-serif;
      display: flex;
      justify-content: center;
      align-items: center;
      border-radius: 2px;
      padding: 10px 50px;

      &:focus {
        outline: none;
        box-shadow: none;
      }

      @include media-breakpoint-down(sm) {
        width: 100%;
      }

      i.fas {
        margin-left: 10px;
      }
    }
  }
}

.footer {
  .footer__big {
    padding-top: 50px;

    @include media-breakpoint-down(md) {
      max-width: 100%;
    }

    .row {
      margin-left: 0;
      margin-right: 0;
    }

    .footer__logo {
      @include media-breakpoint-down(md) {
        text-align: center;
        margin-bottom: 25px;
        padding-bottom: 25px;
        border-bottom: 1px solid #d8d8d8;
      }

      img {
        width: 220px;
        height: auto;
      }

      .footer__logo-address {
        margin-top: 30px;
        font-size: 14px;

        @include media-breakpoint-down(md) {
          margin-top: 20px;
          font-family: 'ProximaNova-SemiBold', sans-serif;
        }
      }
    }

    .footer__list {
      ul {
        list-style-type: none;
        padding-left: 110px;

        @include media-breakpoint-only(md) {
          padding-left: 70px;
        }

        @include media-breakpoint-only(sm) {
          padding-left: 35px;
        }

        @include media-breakpoint-only(xs) {
          padding-left: 0px;
        }

        li {
          font-size: 16px;
          font-family: 'ProximaNova-SemiBold', sans-serif;
          margin: 10px 0;
          cursor: pointer;
        }
      }
    }

    .footer__license {
      text-align: right;

      @include media-breakpoint-down(md) {
        text-align: center;
      }

      @include media-breakpoint-only(xs) {
        text-align: left;
        margin-top: 20px;
      }
    }
  }

  .footer__small {
    margin-top: 50px;
    padding: 20px 0;
    border-top: 1px solid #d8d8d8;

    .row {
      @include media-breakpoint-down(md) {
        flex-direction: column-reverse;
      }
    }

    .footer__rights {
      font-size: 12px;
      display: flex;
      align-items: center;
      text-align: center;

      @include media-breakpoint-down(md) {
        justify-content: center;
        margin-bottom: 20px;
      }
    }

    .footer__socials {
      text-align: right;
      padding-right: 35px;

      @include media-breakpoint-down(md) {
        text-align: center;
        margin: 20px 0;

        img {
          margin: 0 5px;
        }
      }
    }
  }
}

.social-media-widgets {
  position: fixed;
  display: flex;
  flex-direction: column;
  top: 350px;
  left: 0;

  @include media-breakpoint-down(sm) {
    flex-direction: row;
    bottom: 0;
    top: initial;
    width: 100%;
  }

  .facebook-icon {
    background-color: #4867aa;
  }
  .twitter-icon {
    background-color: #1da1f2;
  }
  .google_plus-icon {
    background-color: #db5043;
  }
  .linkedin-icon {
    background-color: #0274b3;
  }
  .mail-icon {
    background-color: #3c3c3c;
  }

  .facebook-icon,
  .twitter-icon,
  .google_plus-icon,
  .linkedin-icon,
  .mail-icon {
    padding: 12px;
    cursor: pointer;

    @include media-breakpoint-down(sm) {
      height: 50px;
      width: 20%;
    }

    img {
      width: 100%;
      height: 100%;
    }
  }
}

.chat-widget {
  position: fixed;
  bottom: 50px;
  right: 10px;
}

